some changes, added registration without email verification